--- a/tokio_workspace_example/tokio_turmoil_axum_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_turmoil_axum_example/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 
 [dependencies]
 async-stream = "0.3.5"
-axum = "0.6.20"
-hyper = { version = "0.14.27", features = ["full"] }
-tokio = { version = "1.32.0", features = ["full"] }
+axum = "0.7.2"
+http-body-util = "0.1.0"
+hyper = { version = "1.1.0", features = ["full"] }
+hyper-util = { version = "0.1.2", features = ["full"] }
+pin-project-lite = "0.2.13"
+tokio = { version = "1.35.1", features = ["full"] }
 tower = "0.4.13"
-tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
-turmoil = "0.5.6"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+turmoil = "0.6.0"
