--- a/axum_workspace_example/axum_server_example/Cargo.toml
+++ b/axum_workspace_example/axum_server_example/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.6.20"
-axum-server = { version = "0.5.1", features = ["rustls", "arc-swap", "rustls-pemfile", "tls-rustls", "tokio-rustls", "pin-project-lite"] }
-tokio = { version = "1.34.0", features = ["full"] }
+axum = "0.7.2"
+axum-server = { version = "0.6.0", features = ["rustls", "arc-swap", "rustls-pemfile", "tls-rustls", "tokio-rustls"] }
+tokio = { version = "1.35.1", features = ["full"] }
