--- a/fastwebsockets_example/Cargo.toml
+++ b/fastwebsockets_example/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fastwebsockets = { version = "0.4.0", features = ["upgrade"] }
-hyper = "0.14.26"
-tokio = { version = "1.28.0", features = ["full"] }
+anyhow = "1.0.77"
+bytes = "1.5.0"
+fastwebsockets = { version = "0.6.0", features = ["upgrade"] }
+http-body-util = "0.1.0"
+hyper = "1.1.0"
+hyper-util = { version = "0.1.2", features = ["full"] }
+tokio = { version = "1.35.1", features = ["full"] }
