--- a/tokio_workspace_example/Cargo.toml
+++ b/tokio_workspace_example/Cargo.toml
@@ -154,7 +154,7 @@ members = [
         "tokio_clap_subcommand_chrono_example",
         "tokio_select_joinhandler_example",
         "tokio_notify_ctrl_c_example",
-        "tokio_turmoil_grpc_example",
+        # "tokio_turmoil_grpc_example",
         "tokio_turmoil_axum_example",
         "tokio_udp_heartbeat_example",
         "tokio_metrics_example",
