--- a/tokio_workspace_example/tokio_turmoil_grpc_example/Cargo.toml
+++ b/tokio_workspace_example/tokio_turmoil_grpc_example/Cargo.toml
@@ -7,17 +7,21 @@ edition = "2021"
 
 [dependencies]
 async-stream = "0.3.5"
-hyper = "0.14.27"
-prost = "0.12.1"
-tokio = { version = "1.32.0", features = ["full"] }
-tonic = "0.10.0"
+http-body = "1.0.0"
+http-body-util = "0.1.0"
+hyper = "1.1.0"
+hyper-util = { version = "0.1.2", features = ["full"] }
+pin-project-lite = "0.2.13"
+prost = "0.12.3"
+tokio = { version = "1.35.1", features = ["full"] }
+tonic = "0.10.2"
 tower = "0.4.13"
-tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
-turmoil = "0.5.6"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+turmoil = "0.6.0"
 
 [build-dependencies]
-prost = "0.12.1"
-prost-build = "0.12.1"
-protox = "0.5.0"
-tonic-build = "0.10.0"
+prost = "0.12.3"
+prost-build = "0.12.3"
+protox = "0.5.1"
+tonic-build = "0.10.2"
