--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
         "hyper_service_struct_impl_example",
         "hyper_echo_example",
         "hyper_http1_request_example",
+        "hyper_connection_graceful_shutdown_example",
 ]
