--- a/axum_workspace_example/Cargo.toml
+++ b/axum_workspace_example/Cargo.toml
@@ -9,7 +9,7 @@ members = [
         "axum_server_example",
         "axum_type_safe_routing_example",
         "axum_style_magic_function_params_example",
-        "axum_login_example",
+        # "axum_login_example",
         "axum_simple_router_example",
         "axum_stream_protobuf_example",
         "axum_post_example",
