--- a/closure_explain_workspace_example/Cargo.toml
+++ b/closure_explain_workspace_example/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 
+resolver = "2"
 
 members = [
         "fn_example",
         "fnmut_example",
         "fnonce_example",
-        "future_example",
 ]
