--- a/delay_timer_workspace_example/delay_timer_async_example/Cargo.toml
+++ b/delay_timer_workspace_example/delay_timer_async_example/Cargo.toml
@@ -6,10 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.72"
-delay_timer = { version = "0.11.4", features = ["full"] }
-hyper = { version = "0.14.27", features = ["full"] }
-smol = "1.3.0"
-tokio = { version = "1.30.0", features = ["full"] }
-tracing = "0.1.37"
-tracing-subscriber = "0.3.17"
+anyhow = "1.0.79"
+bytes = "1.5.0"
+delay_timer = { version = "0.11.5", features = ["full"] }
+http-body-util = "0.1.0"
+hyper = { version = "1.1.0", features = ["full"] }
+hyper-util = { version = "0.1.2", features = ["full"] }
+smol = "2.0.0"
+tokio = { version = "1.35.1", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
