--- a/hyper_workspace_example/Cargo.toml
+++ b/hyper_workspace_example/Cargo.toml
@@ -14,4 +14,5 @@ members = [
         "hyper_path_tree_example",
         "delay_timer_async_example",
         "hyper_client_send_request_example",
+        "hyper_client_request_channel_example",
 ]
