--- a/once_cell_workspace_example/once_cell_arc_swap_example/Cargo.toml
+++ b/once_cell_workspace_example/once_cell_arc_swap_example/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
-name = "once_cell_arc_example"
+name = "once_cell_arc_swap_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.4.1", features = ["derive"] }
-once_cell = "1.18.0"
+arc-swap = "1.6.0"
+once_cell = "1.19.0"
+tokio = { version = "1.35.1", features = ["full"] }
