--- a/once_cell_workspace_example/once_cell_example/Cargo.toml
+++ b/once_cell_workspace_example/once_cell_example/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "once_cell_arc_swap_example"
+name = "once_cell_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-arc-swap = "1.4.0"
-once_cell = "1.8.0"
-tokio = { version = "1.12.0", features = ["full"] }
+once_cell = "1.19.0"
