--- a/once_cell_workspace_example/once_cell_hashmap_example/Cargo.toml
+++ b/once_cell_workspace_example/once_cell_hashmap_example/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "synclazy_example"
+name = "once_cell_hashmap_example"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+once_cell = "1.19.0"
