--- a/libp2p_workspace_example/libp2p_authenticate_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_authenticate_example/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 serde = { version = "1.0.204", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 env_logger = "0.11.5"
