--- a/libp2p_workspace_example/libp2p_blockchain_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_blockchain_example/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.26"
 hex = "0.4.3"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
-libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96"}
+libp2p = { version = "0.54.0", features = ["full"] }
+libp2p-mplex = { version = "0.54.0"}
 log = "0.4.19"
 once_cell = "1.18.0"
 pretty_env_logger = "0.5.0"
