--- a/libp2p_workspace_example/libp2p_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_chat_example/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 anyhow = "1.0.86"
 bytes = "1.6.1"
 futures = "0.3.30"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 rocket = { version = "0.5.1", features = ["json"] }
 tokio = { version = "1.38.1", features = ["full"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
