--- a/libp2p_workspace_example/libp2p_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_example/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.28"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
