--- a/libp2p_workspace_example/libp2p_floodsub_chat_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_floodsub_chat_example/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 [dependencies]
 env_logger = "0.11.3"
 futures = "0.3.30"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
-libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96" }
+libp2p = { version = "0.54.0", features = ["full"] }
+libp2p-mplex = "0.42.0"
 tokio = { version = "1.38.1", features = ["full"] }
