--- a/libp2p_workspace_example/libp2p_misc_server_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_misc_server_example/Cargo.toml
@@ -11,7 +11,7 @@ futures-timer = "3"
 http-body-util = "0.1"
 hyper = { version = "1", features = ["full"]}
 hyper-util = { version = "0.1", features = ["full"] }
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 prometheus-client = "0.22.2"
 serde = "1.0.203"
 serde_derive = "1.0.203"
