--- a/libp2p_workspace_example/libp2p_peer_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_peer_example/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 # libp2p-mplex = "0.40.0"
 log = "0.4.22"
 once_cell = "1.19.0"
