--- a/libp2p_workspace_example/libp2p_peer_id_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_peer_id_example/Cargo.toml
@@ -5,4 +5,4 @@ edition = "2021"
 
 [dependencies]
 hex = "0.4.3"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
