--- a/libp2p_workspace_example/libp2p_quic_server_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_quic_server_example/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
-libp2p-core = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96"}
-libp2p-quic = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96"}
+libp2p = { version = "0.54.0", features = ["full"] }
+libp2p-core = "0.42.0"
+libp2p-quic = "0.11.1"
 tokio = { version = "1.38.1", features = ["full"] }
 libp2p-identity = { version = "0.2.9", features = ["ed25519"] }
