--- a/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_metrics_example/Cargo.toml
@@ -13,7 +13,7 @@ env_logger = "0.11.3"
 futures = "0.3.30"
 http-body-util = "0.1.2"
 hyper-util = { version = "0.1.6", features = ["full"] }
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 opentelemetry = { version = "0.22.0", features = ["metrics"] }
 opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
 opentelemetry_api = "0.20.0"
