--- a/libp2p_workspace_example/libp2p_tokio_rendezvous_discover_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_rendezvous_discover_example/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 async-trait = "0.1.81"
 env_logger = "0.11.3"
 futures = "0.3.30"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 log = "0.4.22"
 tokio = { version = "1.38.1", features = ["full"] }
 tracing = "0.1.40"
