--- a/libp2p_workspace_example/libp2p_tokio_stream_with_existing_key_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_stream_with_existing_key_example/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 anyhow = "1.0.86"
 futures = "0.3.30"
 hex = "0.4.3"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
-libp2p-stream = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96"}
+libp2p = { version = "0.54.0", features = ["full"] }
+libp2p-stream = "0.2.0-alpha"
 rand = "0.8.5"
 tokio = { version = "1.38.1", features = ["full"] }
 tracing = "0.1.40"
