--- a/libp2p_workspace_example/libp2p_tokio_upnp_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tokio_upnp_example/Cargo.toml
@@ -5,6 +5,6 @@ edition = "2021"
 
 [dependencies]
 futures = "0.3.30"
-libp2p = { git = "https://github.com/libp2p/rust-libp2p", rev = "98da34a7dc216b5e022ff5400356c73a23dfac96", features = ["full"] }
+libp2p = { version = "0.54.0", features = ["full"] }
 tokio = { version = "1.38.1", features = ["full"] }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
