--- a/tuono_workspace_example/tuono-tutorial/package.json
+++ b/tuono_workspace_example/tuono-tutorial/package.json
@@ -8,14 +8,27 @@
     "format": "prettier -w *"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@material-ui/pickers": "^3.3.11",
+    "@material-ui/styles": "^4.11.5",
+    "@types/yup": "^0.32.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tuono": "0.17.6"
+    "tuono": "0.17.6",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "concurrently": "^9.1.2",
+    "cypress": "^14.0.1",
+    "json-server": "^1.0.0-beta.3",
+    "json-server-auth": "^2.1.0",
     "typescript": "^5.7.3"
   }
 }
