--- a/alloy_woekspace_example/Cargo.toml
+++ b/alloy_woekspace_example/Cargo.toml
@@ -14,4 +14,5 @@ members = [
   "alloy_contract_example2",
   "alloy_contract_example3",
   "alloy_contract_read_write_events_example",
+  "alloy_with_required_confirmations_timeout_example",
 ]
