--- a/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
+++ b/openraft_workspace_example/raft_kv_memstore_grpc/Cargo.toml
@@ -9,7 +9,7 @@ clap = { version = "4.5.23", features = ["derive", "env"] }
 dashmap = "6.1.0"
 futures = "0.3.31"
 memstore = { git = "https://github.com/databendlabs/openraft" }
-openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias"] }
+openraft = { git = "https://github.com/databendlabs/openraft", features = ["type-alias"] }
 prost = "0.13.4"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
