--- a/solana_workspace_example/solana_program_hello_example/Cargo.toml
+++ b/solana_workspace_example/solana_program_hello_example/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 solana-program = "2.1.11"
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[features]
+no-entrypoint = []
