--- a/libp2p_workspace_example/libp2p_tuono_a_example/Cargo.toml
+++ b/libp2p_workspace_example/libp2p_tuono_a_example/Cargo.toml
@@ -13,9 +13,14 @@ path = "src/bin/main.rs"
 [dependencies]
 alloy = "0.11.0"
 anyhow = "1.0.95"
+byteorder = "1.5.0"
 futures = "0.3.31"
 hex = "0.4.3"
 libp2p = { version = "0.55.0", features = ["full"] }
+openraft = { git = "https://github.com/databendlabs/openraft", features = ["serde", "type-alias", "serde_json"] }
+rand = "0.8"
+reqwest = { version = "0.12.12", features = ["json"] }
+rocksdb = "0.23.0"
 secp256k1 = { version = "0.30.0", features = [
   "alloc",
   "std",
@@ -24,5 +29,7 @@ secp256k1 = { version = "0.30.0", features = [
   "serde",
 ] }
 serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.138"
 tokio = { version = "1.43.0", features = ["full"] }
+tracing = "0.1.41"
 tuono_lib = "0.17.8"
