--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -10,4 +10,5 @@ members = [
   "solana_handle_event_example",
   "solana_get_signatures_for_address_with_config_example",
   "solana_handle_transaction_with_config_example",
+  "solana_rust_example",
 ]
