--- a/solana_workspace_example/Cargo.toml
+++ b/solana_workspace_example/Cargo.toml
@@ -13,4 +13,5 @@ members = [
   "solana_rust_example",
   "solana_rpc_getblock_example",
   "solana_rpc_getslot_example",
+  "solana_rpc_genesis_block_example",
 ]
