--- a/rand_workspace_example/Cargo.toml
+++ b/rand_workspace_example/Cargo.toml
@@ -9,4 +9,5 @@ members = [
   "rand_example2",
   "rand_uniform_distribution_example",
   "rand_rngcore_example",
+  "rand_rng_trait_enum_example",
 ]
