--- a/rand_workspace_example/rand_rng_trait_enum_example2/Cargo.toml
+++ b/rand_workspace_example/rand_rng_trait_enum_example2/Cargo.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rand = { version = "0.9.0", features = ["alloc"] }
-rand_chacha = "0.9.0"
-rand_core = "0.9.3"
+rand = "0.9"
+rand_chacha = "0.9"
 rand_xorshift = "0.4.0"
