--- a/chitchat_workspace_example/chitchat_example/Cargo.toml
+++ b/chitchat_workspace_example/chitchat_example/Cargo.toml
@@ -6,22 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.79"
+anyhow = "1.0.97"
 # axum = "0.7.2"
-chitchat = "0.9"
-# chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
-clap = { version = "4.4.18", features = ["derive"] }
-console-subscriber = "0.2.0"
+# chitchat = "0.9"
+chitchat = { git = "https://github.com/quickwit-oss/chitchat"}
+clap = { version = "4.5.32", features = ["derive"] }
+console-subscriber = "0.4.1"
 cool-id-generator = "1.0.1"
-env_logger = "0.11.0"
-once_cell = "1.19.0"
-poem = "2.0.0"
-poem-openapi = { version = "4", features = ["swagger-ui"] }
-serde = { version = "1.0.195", features = ["derive"] }
-serde_json = "1.0.111"
-tokio = { version = "1.35.1", features = ["full"] }
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+env_logger = "0.11.7"
+once_cell = "1.21.1"
+poem = "3.1.7"
+poem-openapi = { version = "5", features = ["swagger-ui"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = { version = "1.44.1", features = ["full"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 
 [dev-dependencies]
