--- a/rusty_v8_workspace_example/deno_node_basic_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_node_basic_example/Cargo.toml
@@ -31,6 +31,7 @@ deno_webgpu = "0.179.0"
 deno_webidl = "0.212.0"
 deno_websocket = "0.217.0"
 deno_webstorage = "0.207.0"
-tokio = { version = "1.47.1", features = ["full"] }
 node_resolver = "0.50.0"
 sys_traits = { version = "0.1.17", features = ["real"] }
+tokio = { version = "1.47.1", features = ["full"] }
+futures = "0.3"
