--- a/rusty_v8_workspace_example/rust_deno_scripting/Cargo.toml
+++ b/rusty_v8_workspace_example/rust_deno_scripting/Cargo.toml
@@ -7,12 +7,38 @@ edition = "2024"
 anyhow = "1"
 base64 = "0.22.1"
 deno_ast = { version = "0.49", features = ["transpiling"] }
-deno_core = "0.354"
+deno_broadcast_channel = "0.206.0"
+deno_cache = "0.144.0"
+deno_canvas = "0.81.0"
+deno_console = "0.212.0"
+deno_core = "0.354.0"
+deno_cron = "0.92.0"
+deno_crypto = "0.226.0"
 deno_error = "0.7"
+deno_fetch = "0.236.0"
+deno_ffi = "0.199.0"
+deno_fs = "0.122.0"
 deno_graph = "0.98.0"
+deno_http = "0.210.0"
+deno_io = "0.122.0"
+deno_kv = "0.120.0"
+deno_napi = "0.143.0"
+deno_net = "0.204.0"
+deno_node = "0.150.0"
+deno_os = "0.29.0"
+deno_permissions = "0.71.0"
+deno_process = "0.27.0"
 deno_resolver = "0.43"
 deno_runtime = { version = "0.220", features = ["transpile"] }
 deno_semver = "0.9.0"
+deno_telemetry = "0.34.0"
+deno_tls = "0.199.0"
+deno_url = "0.212.0"
+deno_web = "0.243.0"
+deno_webgpu = "0.179.0"
+deno_webidl = "0.212.0"
+deno_websocket = "0.217.0"
+deno_webstorage = "0.207.0"
 dirs = "6.0.0"
 flate2 = "1.1"
 node_resolver = "0.50.0"
