--- a/rusty_v8_workspace_example/Cargo.toml
+++ b/rusty_v8_workspace_example/Cargo.toml
@@ -24,5 +24,6 @@ members = [
   "deno_core_module_loader_example",
   "deno_core_module_loader_example2",
   "deno_node_https_example",
-  "deno_node_basic_example",
+  "deno_node_basic_example", 
+  "deno_node_runtime_example",
 ]
