--- a/rusty_v8_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
@@ -11,6 +11,8 @@ deno_ast = { version = "0.49.0", features = ["transpiling"] }
 deno_core = "0.354.0"
 deno_error = "0.7.0"
 deno_graph = "0.98.0"
+deno_napi = "0.143.0"
+deno_node = "0.150.0"
 deno_npm = "0.36.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
