--- a/rusty_v8_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
@@ -14,6 +14,9 @@ deno_graph = "0.98.0"
 deno_napi = "0.143.0"
 deno_node = "0.150.0"
 deno_npm = "0.36.0"
+deno_npm_cache = "0.31.0"
+deno_npm_installer = "0.7.0"
+deno_package_json = "0.14.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
 deno_semver = "0.5.0"
