--- a/rusty_v8_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_resolver_deno_npm_example/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1"
+async-trait = "0.1"
 base64 = "0.22.1"
 colored = "3.0.0"
+dashmap = "6.1"
 deno_ast = { version = "0.49.0", features = ["transpiling"] }
 deno_core = "0.354.0"
 deno_error = "0.7.0"
@@ -20,9 +22,16 @@ deno_npm_installer = "0.7.0"
 deno_package_json = "0.14.0"
 deno_resolver = "0.43.0"
 deno_runtime = { version = "0.220.0", features = ["transpile"] }
-deno_semver = "0.5.0"
+deno_semver = "0.9.0"
+deno_task_shell = "0.26.1"
 dirs = "6.0.0"
+eszip = "0.96.0"
 flate2 = "1.1"
+futures = "0.3"
+hex = "0.4"
+http = "1.3"
+log = "0.4"
+sha1 = "0.10"
 node_resolver = "0.50.0"
 reqwest = { version = "0.12.22", features = ["json"] }
 semver = "1.0"
@@ -31,7 +40,9 @@ serde_json = "1.0"
 sha2 = "0.10"
 sys_traits = "0.1.17"
 tar = "0.4"
+thiserror = "2.0"
 tokio = { version = "1.47.1", features = ["full"] }
+tokio-util = "0.7"
 tracing = "0.1"
 ureq = "3.0.12"
 url = "2.5.4"
