--- a/rusty_v8_workspace_example/deno_lib_libmainworker_example/Cargo.toml
+++ b/rusty_v8_workspace_example/deno_lib_libmainworker_example/Cargo.toml
@@ -1,27 +1,110 @@
 [package]
 name = "deno_lib_libmainworker_example"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
-deno_cache_dir = "0.25.0"
+async-trait = "0.1.89"
+aws-lc-rs = "1.13.3"
+base64 = "0.22.1"
+bincode = "2.0.1"
+boxed_error = "0.2.3"
+bytes = "1.10.1"
+chrono = "0.4.41"
+clap = "4.5.45"
+clap_complete = "4.5.57"
+clap_complete_fig = "4.5.2"
+color-print = "0.3.7"
+console_static_text = "0.8.3"
+crossterm = "0.29.0"
+dashmap = "6.1.0"
+deno_ast = "0.49.0"
+deno_cache_dir = "0.24.0"
+deno_config = "0.63.0"
 deno_core = { version = "0.355.0", features = ["include_js_files_for_snapshotting"] }
+deno_doc = "0.182.0"
 deno_error = "0.7.0"
+deno_graph = "0.98.1"
 deno_lib = "0.31.0"
-deno_npm = "0.37.0"
-deno_resolver = "0.44.0"
+deno_lint = "0.77.0"
+deno_media_type = "0.2.9"
+deno_npm = "0.36.0"
+deno_npm_cache = "0.32.0"
+deno_npm_installer = "0.8.0"
+deno_package_json = "0.15.0"
+deno_path_util = "0.6.1"
+deno_resolver = { version = "0.44.0", features = ["deno_ast", "graph", "sync"] }
 deno_runtime = { version = "0.221.0", features = ["include_js_files_for_snapshotting"] }
 deno_semver = "0.9.0"
+deno_signals = "0.4.0"
 deno_snapshots = "0.28.0"
+deno_task_shell = "0.26.1"
+deno_telemetry = "0.35.0"
+deno_terminal = "0.2.2"
+dotenvy = "0.15.7"
+dprint-core = "0.67.4"
+dprint-plugin-json = "0.20.0"
+dprint-plugin-jupyter = "0.2.0"
+dprint-plugin-markdown = "0.19.0"
+dprint-plugin-typescript = "0.95.9"
+esbuild_client = "0.5.0"
+eszip = "0.97.0"
+faster-hex = "0.10.0"
+flate2 = "1.1.2"
 http = "1.0"
 http-body = "1.0.1"
 http-body-util = "0.1.2"
+import_map = "0.23.0"
+indexmap = "2.10.0"
+jsonc-parser = { version = "0.26.3", features = ["cst"] }
+jupyter-protocol = "0.8.1"
+jupyter_runtime = { package = "runtimelib", version = "0.28.0", features = ["tokio-runtime"] }
+keyring = "3.6.3"
+lazy-regex = "3.4.1"
+libc = "0.2.175"
+log = "0.4.27"
+malva = "0.14.1"
+markup_fmt = "0.23.1"
+memchr = "2.7.5"
+nix = "0.30.1"
 node_resolver = "0.51.0"
+notify = "8.2.0"
+once_cell = "1.21.3"
+open = "5.3.2"
+p256 = "0.13.2"
+pathdiff = "0.2.3"
+percent-encoding = "2.3.1"
+phf = { version = "0.12.1", features = ["macros"] }
+pretty_yaml = "0.5.1"
+quick-junit = "0.5.1"
+rand = "0.9.2"
+regex = "1.11.1"
+rustc-hash = "2.1.1"
+rustyline = "17.0.0"
+rustyline-derive = "0.11.1"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0"
+sha2 = "0.10.9"
+shell-escape = "0.1.5"
+spki = "0.7.3"
+sqlformat = "0.3.5"
+strsim = "0.11.1"
 sys_traits = { version = "0.1.17", features = ["real"] }
+tar = "0.4"
+tempfile = "3.20.0"
+text-size = "1.1.1"
+text_lines = "0.6.0"
+thiserror = "2.0.15"
 tokio = { version = "1.45.1", features = ["full"] }
+tokio-util = "0.7.16"
+typed-arena = "2.0.2"
+unicode-width = "0.2.1"
 url = "2.5.4"
+uuid = "1.18.0"
+walkdir = "2.5.0"
+zip = "4.3.0"
+zstd = "0.13.3"
 
 [[bin]]
 name = "npm_example"
