--- a/redis_workspace_example/redis_ttl_example/Cargo.toml
+++ b/redis_workspace_example/redis_ttl_example/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "1.3.3"
+bincode = { version = "2.0.1", features = ["serde"] }
 dotenv = "0.15.0"
-redis = { version = "0.26", features = ["tokio-comp"] }
-serde = { version = "1.0.209", features = ["derive"] }
-tokio = { version = "1.39.3", features = ["full"] }
+redis = { version = "0.32", features = ["tokio-comp"] }
+serde = { version = "1.0.219", features = ["derive"] }
+tokio = { version = "1.47.1", features = ["full"] }
