--- a/deno_component_workspace_example/Cargo.toml
+++ b/deno_component_workspace_example/Cargo.toml
@@ -28,8 +28,9 @@ members = [
   "deno_node_runtime_example",
   "deno_graph_basic_example",
   "deno_resolver_deno_npm_example",
-  "deno_lib_libmainworker_example", 
+  "deno_lib_libmainworker_example",
   "deno_web_blobstore_example",
+  "deno_os_example",
 ]
 
 # Required for V8 compatibility - rusty-v8 needs at least -O1 to not miscompile
