--- a/rustyscript_workspace_example/rustyscript_example/Cargo.toml
+++ b/rustyscript_workspace_example/rustyscript_example/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2021"
 
 [dependencies]
 # rustyscript = "0.11"
-rustyscript = { git = "https://github.com/rscarson/rustyscript", rev = "1f18c83bc4a32c31f6c34cd07f18d4b0c5ab6cf5" }
-tokio = { version = "1.44.1", features = ["full"] }
+rustyscript = { version = "0.12.3" }
+# rustyscript = { git = "https://github.com/rscarson/rustyscript", rev = "1f18c83bc4a32c31f6c34cd07f18d4b0c5ab6cf5" }
+tokio = { version = "1.47.1", features = ["full"] }
