--- a/deno_component_workspace_example/deno_lib_libmainworker_example/Cargo.toml
+++ b/deno_component_workspace_example/deno_lib_libmainworker_example/Cargo.toml
@@ -19,9 +19,13 @@ color-print = "0.3.7"
 console_static_text = "0.8.3"
 crossterm = "0.29.0"
 dashmap = "6.1.0"
+deno_core = "0.355.0"
+deno_error = "0.7.0"
 deno_lib = "0.32.0"
+deno_npm = "0.38.0"
 deno_resolver = { version = "0.45.0", features = ["deno_ast", "graph", "sync"] }
 deno_runtime = { version = "0.222.0", features = ["include_js_files_for_snapshotting"] }
+deno_semver = "0.9.0"
 deno_snapshots = "0.29.0"
 dotenvy = "0.15.7"
 dprint-core = "0.67.4"
@@ -49,7 +53,7 @@ malva = "0.14.1"
 markup_fmt = "0.23.1"
 memchr = "2.7.5"
 nix = "0.30.1"
-node_resolver = "0.51.0"
+node_resolver = "0.52.0"
 notify = "8.2.0"
 once_cell = "1.21.3"
 open = "5.3.2"
